--- a/app/templates/academic_services/customer_index.html
+++ b/app/templates/academic_services/customer_index.html
@@ -8,7 +8,7 @@
     {% include "messages.html" %}
     <section class="section-padding" id="hero">
         <div class="container is-fullhd">
-            <div class="columns{% if is_mobile %}is-mobile is-flex is-justify-content-center{% endif %}" >
+            <div class="columns{% if is_mobile %}is-mobile is-flex is-justify-content-center{% endif %}">
                 {% if not current_user.is_authenticated %}
                     <div class="column is-4 is-align-item-center">
                         <section class="hero">
@@ -33,8 +33,13 @@
                                     </div>
                                     <div class="field">
                                         <label class="label">รหัสผ่าน</label>
-                                        <div class="control">
+                                        <div class="control has-icons-right is-expanded">
                                             {{ form.password(placeholder='Password', class='input') }}
+                                            <span class="icon is-small is-right" style="pointer-events: all; cursor: pointer;"
+                                                  onclick="toggleShowPassword()"
+                                            >
+                                              <i id="open_password_icon" class="fas fa-eye"></i>
+                                            </span>
                                         </div>
                                     </div>
                                     <a href="{{ url_for('academic_services.forget_password') }}">คุณลืมรหัสผ่านใช่หรือไม่?</a>
@@ -57,7 +62,8 @@
                     </div>
                 {% endif %}
                 {% if not is_mobile %}
-                    <div class="column is-8 {% if current_user.is_authenticated %}is-offset-2{% endif %}" style="margin-bottom: 5em">
+                    <div class="column is-8 {% if current_user.is_authenticated %}is-offset-2{% endif %}"
+                         style="margin-bottom: 5em">
                         <section class="hero">
                             <div class="hero-body">
                                 <p class="title has-text-centered">งานบริการตรวจวิเคราะห์</p>
@@ -157,5 +163,22 @@
         </div>
     </footer>
 {% endblock %}
-{% block footer %}
+{% block scripts %}
+    {{ super() }}
+    <script>
+        function toggleShowPassword() {
+            const password = document.getElementById("password");
+            const openPasswordIcon = document.getElementById("open_password_icon");
+
+            if (password.type === "password") {
+                password.type = "text";
+                openPasswordIcon.classList.remove("fa-eye");
+                openPasswordIcon.classList.add("fa-eye-slash");
+            } else {
+                password.type = "password";
+                openPasswordIcon.classList.remove("fa-eye-slash");
+                openPasswordIcon.classList.add("fa-eye");
+            }
+        }
+    </script>
 {% endblock %}
