--- a/app/templates/service_admin/view_invoice_for_central_admin.html
+++ b/app/templates/service_admin/view_invoice_for_central_admin.html
@@ -224,7 +224,7 @@
                             </p>
                             <ul class="menu-list">
                                 <li>
-                                    {% if invoice.download_at %}
+                                    {% if invoice.downloaded_at %}
                                         <span class="tag has-text-success is-rounded">ดาวโหลดแล้ว</span>
                                     {% else %}
                                         <span class="tag is-danger is-rounded">ยังไม่ดาวโหลด</span>
@@ -266,7 +266,7 @@
                                            is_download='true') }}"
                                         >
                                             <span class="icon"><i class="fas fa-download"></i></span>
-                                            <span>ดาวน์โหลด PDF</span>
+                                            <span>ดาวน์โหลดใบแจ้งหนี้</span>
                                         </a>
                                     </li>
                                 {% elif invoice.file_attached_at and not invoice.paid_at %}
@@ -285,7 +285,7 @@
                                             download_filename=invoice.invoice_no ~ '.pdf') }}"
                                         >
                                             <span class="icon"><i class="fas fa-download"></i></span>
-                                            <span>ดาวน์โหลดใบแจ้งหนี้</span>
+                                            <span>ดาวน์โหลดใบแจ้งหนี้ฉบับลงนามคณบดี</span>
                                         </a>
                                     </li>
                                 {% elif invoice.file %}
@@ -295,19 +295,27 @@
                                             download_filename=invoice.invoice_no ~ '.pdf') }}"
                                         >
                                             <span class="icon"><i class="fas fa-download"></i></span>
-                                            <span>ดาวน์โหลดใบแจ้งหนี้</span>
+                                            <span>ดาวน์โหลดใบแจ้งหนี้ฉบับลงนามคณบดี</span>
                                         </a>
                                     </li>
                                 {% else %}
                                     <li>
                                         <a class="button is-info is-outlined is-rounded is-small is-fullwidth"
-                                           href="{{ url_for('service_admin.export_invoice_pdf', invoice_id=invoice.id) }}"
+                                           href="{{ url_for('service_admin.export_invoice_pdf', invoice_id=invoice.id,
+                                           is_download='true') }}"
                                         >
                                             <span class="icon"><i class="fas fa-download"></i></span>
-                                            <span>ดาวน์โหลด PDF</span>
+                                            <span>ดาวน์โหลดใบแจ้งหนี้</span>
                                         </a>
                                     </li>
                                 {% endif %}
+                            <a class="button is-info is-outlined is-rounded is-small is-fullwidth"
+                                           href="{{ url_for('service_admin.export_invoice_pdf', invoice_id=invoice.id,
+                                           is_download='true') }}"
+                                        >
+                                            <span class="icon"><i class="fas fa-download"></i></span>
+                                            <span>ดาวน์โหลดใบแจ้งหนี้</span>
+                                        </a>
                             </ul>
                         </aside>
                     </div>
