--- a/app/templates/service_admin/create_customer_address.html
+++ b/app/templates/service_admin/create_customer_address.html
@@ -71,7 +71,13 @@
                                     <span class="has-text-danger">*</span>
                                 </label>
                                 <div class="control">
-                                    {{ form.province(class='js-example-basic-single', onchange="updateDistricts()") }}
+                                    {{ form.province(class='js-example-basic-single',
+                                        **{"hx-post": url_for('service_admin.get_districts'),
+                                           "hx-swap": "innerHTML",
+                                           "hx-trigger": "change, load",
+                                           "hx-target": "#districts"
+                                        })
+                                    }}
                                 </div>
                             </div>
                             <div class="field">
@@ -79,8 +85,14 @@
                                     {{ form.district.label }}
                                     <span class="has-text-danger">*</span>
                                 </label>
-                                <div class="control">
-                                    {{ form.district(class='js-example-basic-single', onchange="updateSubdistricts()") }}
+                                <div class="control" id="districts">
+                                    {{ form.district(class='js-example-basic-single',
+                                        **{"hx-post": url_for('service_admin.get_subdistricts', subdistrict_id=address.subdistrict_id),
+                                            "hx-swap": "innerHTML",
+                                            "hx-trigger": "change, load",
+                                            "hx-target": "#subdistricts"
+                                        })
+                                    }}
                                 </div>
                             </div>
                             <div class="field">
@@ -88,8 +100,14 @@
                                     {{ form.subdistrict.label }}
                                     <span class="has-text-danger">*</span>
                                 </label>
-                                <div class="control">
-                                    {{ form.subdistrict(class='js-example-basic-single', onchange="updateZipcode()") }}
+                                <div class="control" id="subdistricts">
+                                    {{ form.subdistrict(class='js-example-basic-single',
+                                        **{"hx-post": url_for('service_admin.get_zipcode'),
+                                            "hx-swap": "innerHTML",
+                                            "hx-trigger": "change, load",
+                                            "hx-target": "#zipcode"
+                                        })
+                                    }}
                                 </div>
                             </div>
                         </div>
@@ -98,7 +116,7 @@
                                 รหัสไปรษณีย์
                                 <span class="has-text-danger">*</span>
                             </label>
-                            <div class="control">
+                            <div class="control" id="zipcode">
                                 {{ form.zipcode(class='input') }}
                             </div>
                         </div>
@@ -141,9 +159,17 @@
     {{ super() }}
     <script src="https://fastly.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script>
+        function initSelect2() {
+            $('.js-example-basic-single').select2({ width: '100%' })
+                .on('select2:select', function () {
+                    this.dispatchEvent(new Event('change', { bubbles: true }));
+                });
+            }
+
         $(document).ready(() => {
-            $('.js-example-basic-single').select2({
-                width: '100%'
+            initSelect2();
+            document.body.addEventListener('htmx:afterSwap', (evt) => {
+                initSelect2();
             });
         });
 
@@ -192,43 +218,43 @@
             });
         });
     </script>
-    <script>
-        function updateDistricts() {
-            const provinceId = document.getElementById('province').value;
-            fetch('/academic_services/api/get_districts?province_id=' + provinceId)
-                .then(res => res.json())
-                .then(data => {
-                    const districtSelect = document.getElementById('district');
-                    districtSelect.innerHTML = '<option value="">กรุณาเลือกอำเภอ</option>';
-                    data.forEach(d => {
-                        districtSelect.innerHTML += `<option value="${d.id}">${d.name}</option>`;
-                    });
-                    document.getElementById('subdistrict').innerHTML = '<option value="">กรุณาเลือกตำบล</option>';
-                    document.getElementById('zipcode').value = '';
-                });
-        }
-
-        function updateSubdistricts() {
-            const districtId = document.getElementById('district').value;
-            fetch('/academic_services/api/get_subdistricts?district_id=' + districtId)
-                .then(res => res.json())
-                .then(data => {
-                    const subSelect = document.getElementById('subdistrict');
-                    subSelect.innerHTML = '<option value="">กรุณาเลือกตำบล</option>';
-                    data.forEach(s => {
-                        subSelect.innerHTML += `<option value="${s.id}">${s.name}</option>`;
-                    });
-                    document.getElementById('zipcode').value = '';
-                });
-        }
-
-        function updateZipcode() {
-            const subdistrictId = document.getElementById('subdistrict').value;
-            fetch('/academic_services/api/get_zipcode?subdistrict_id=' + subdistrictId)
-                .then(res => res.json())
-                .then(data => {
-                    document.getElementById('zipcode').value = data.zipcode || '';
-                });
-        }
-    </script>
+{#    <script>#}
+{#        function updateDistricts() {#}
+{#            const provinceId = document.getElementById('province').value;#}
+{#            fetch('/academic_services/api/get_districts?province_id=' + provinceId)#}
+{#                .then(res => res.json())#}
+{#                .then(data => {#}
+{#                    const districtSelect = document.getElementById('district');#}
+{#                    districtSelect.innerHTML = '<option value="">กรุณาเลือกอำเภอ</option>';#}
+{#                    data.forEach(d => {#}
+{#                        districtSelect.innerHTML += `<option value="${d.id}">${d.name}</option>`;#}
+{#                    });#}
+{#                    document.getElementById('subdistrict').innerHTML = '<option value="">กรุณาเลือกตำบล</option>';#}
+{#                    document.getElementById('zipcode').value = '';#}
+{#                });#}
+{#        }#}
+{##}
+{#        function updateSubdistricts() {#}
+{#            const districtId = document.getElementById('district').value;#}
+{#            fetch('/academic_services/api/get_subdistricts?district_id=' + districtId)#}
+{#                .then(res => res.json())#}
+{#                .then(data => {#}
+{#                    const subSelect = document.getElementById('subdistrict');#}
+{#                    subSelect.innerHTML = '<option value="">กรุณาเลือกตำบล</option>';#}
+{#                    data.forEach(s => {#}
+{#                        subSelect.innerHTML += `<option value="${s.id}">${s.name}</option>`;#}
+{#                    });#}
+{#                    document.getElementById('zipcode').value = '';#}
+{#                });#}
+{#        }#}
+{##}
+{#        function updateZipcode() {#}
+{#            const subdistrictId = document.getElementById('subdistrict').value;#}
+{#            fetch('/academic_services/api/get_zipcode?subdistrict_id=' + subdistrictId)#}
+{#                .then(res => res.json())#}
+{#                .then(data => {#}
+{#                    document.getElementById('zipcode').value = data.zipcode || '';#}
+{#                });#}
+{#        }#}
+{#    </script>#}
 {% endblock %}
