--- a/app/templates/service_admin/view_request.html
+++ b/app/templates/service_admin/view_request.html
@@ -222,34 +222,38 @@
                                 </p>
                                 <ul class="menu-list">
                                     <li>
-                                        {% for result in service_request.results %}
-                                            {% for item in result.result_items %}
-                                                {% if item.final_file %}
-                                                    <a {% if result.status.status_id == 22 %}
-                                                        class="button is-small is-link is-light is-rounded is-fullwidth mb-2"
-                                                        href="{{ url_for('academic_services.download_file', key=item.final_file,
-                                                                    download_filename=item.report_language + ' ' + '(ฉบับจริง)' + '.pdf') }}"
+                                        {% if not service_request.results %}
+                                            ยังไม่ดำเนินการทดสอบ
+                                        {% else %}
+                                            {% for result in service_request.results %}
+                                                {% for item in result.result_items %}
+                                                    {% if item.final_file %}
+                                                        <a {% if result.status.status_id == 22 %}
+                                                            class="button is-small is-link is-light is-rounded is-fullwidth mb-2"
+                                                            href="{{ url_for('academic_services.download_file', key=item.final_file,
+                                                                        download_filename=item.report_language + ' ' + '(ฉบับจริง)' + '.pdf') }}"
+                                                        {% else %}
+                                                            class="button is-small is-link is-light is-rounded is-fullwidth mb-2 Warn"
+                                                        {% endif %}
+                                                        >
+                                                            <span>{{ item.report_language + ' ' + '(ฉบับจริง)' or 'ไม่ระบุภาษา' }}</span>
+                                                            <span class="icon is-small"><i
+                                                                    class="fas fa-download"></i></span>
+                                                        </a>
+                                                    {% elif item.draft_file %}
+                                                        <a class="button is-small is-link is-light is-rounded is-fullwidth mb-2"
+                                                           href="{{ url_for('academic_services.download_file', key=item.draft_file,
+                                                                               download_filename=item.report_language + ' ' + '(ฉบับร่าง)' + '.pdf') }}">
+                                                            <span>{{ item.report_language + ' ' + '(ฉบับร่าง)' or 'ไม่ระบุภาษา' }}</span>
+                                                            <span class="icon is-small"><i
+                                                                    class="fas fa-download"></i></span>
+                                                        </a>
                                                     {% else %}
-                                                        class="button is-small is-link is-light is-rounded is-fullwidth mb-2 Warn"
+                                                        กำลังดำเนินการทดสอบ
                                                     {% endif %}
-                                                    >
-                                                        <span>{{ item.report_language + ' ' + '(ฉบับจริง)' or 'ไม่ระบุภาษา' }}</span>
-                                                        <span class="icon is-small"><i
-                                                                class="fas fa-download"></i></span>
-                                                    </a>
-                                                {% elif item.draft_file %}
-                                                    <a class="button is-small is-link is-light is-rounded is-fullwidth mb-2"
-                                                       href="{{ url_for('academic_services.download_file', key=item.draft_file,
-                                                                           download_filename=item.report_language + ' ' + '(ฉบับร่าง)' + '.pdf') }}">
-                                                        <span>{{ item.report_language + ' ' + '(ฉบับร่าง)' or 'ไม่ระบุภาษา' }}</span>
-                                                        <span class="icon is-small"><i
-                                                                class="fas fa-download"></i></span>
-                                                    </a>
-                                                {% else %}
-                                                    กำลังดำเนินการทดสอบ
-                                                {% endif %}
+                                                {% endfor %}
                                             {% endfor %}
-                                        {% endfor %}
+                                        {% endif %}
                                     </li>
                                 </ul>
                             <hr>
@@ -293,7 +297,7 @@
                                             <span>ออกใบเสนอราคา</span>
                                         </a>
                                     </li>
-                                {% elif (service_request.status.status_id == 10 or service_request.status.status_id == 11) %}
+                                {% elif (service_request.get_result() and service_request.get_result().sent_at == None) %}
                                     <li>
                                         <a class="button is-primary is-rounded is-fullwidth mb-2"
                                            {% if result_id %}
@@ -308,19 +312,20 @@
                                             <span>ออกใบรายงานผล (ฉบับร่าง)</span>
                                         </a>
                                         <a class="button is-info is-rounded is-fullwidth mb-2"
-                                                {% if result_id %}
-                                           href="{{ url_for('service_admin.create_final_result', result_id=result_id,
+                                           {% if result_id %}
+                                                href="{{ url_for('service_admin.create_final_result', result_id=result_id,
                                                 request_id=service_request.id, menu='test_item') }}"
-                                                {% else %}
-                                           href="{{ url_for('service_admin.create_final_result', request_id=service_request.id,
-                                               menu='test_item') }}"
-                                                {% endif %}
+                                           {% else %}
+                                                href="{{ url_for('service_admin.create_final_result', request_id=service_request.id,
+                                                menu='test_item') }}"
+                                           {% endif %}
                                         >
                                             <span class="icon"><i class="fas fa-download"></i></span>
                                             <span>ออกใบรายงานผล (ฉบับจริง)</span>
                                         </a>
                                     </li>
-                                {% elif (service_request.status.status_id == 14) %}
+                                {% elif (service_request.get_result() and service_request.get_result().result_edit_at != None
+                                        and service_request.get_result().is_edited == None) %}
                                     <li>
                                         <a class="button is-warning is-rounded is-fullwidth mb-2"
                                            href="{{ url_for('service_admin.test_item_index', menu='test_item',
@@ -331,8 +336,7 @@
                                         </a>
                                     </li>
                                 {% endif %}
-                                {% if (service_request.status.status_id == 13 or service_request.status.status_id >= 16)
-                                        and result_id %}
+                                {% if (service_request.get_result() and service_request.get_result().approved_at) %}
                                     <li>
                                         <a class="button is-info is-rounded is-fullwidth mb-2"
                                            href="{{ url_for('service_admin.create_final_result', result_id=result_id,
