--- a/app/templates/service_admin/test_item_index.html
+++ b/app/templates/service_admin/test_item_index.html
@@ -24,7 +24,7 @@
                         <li {% if tab == 'testing' %}class="is-active"{% endif %}>
                             <a href="{{ url_for('service_admin.test_item_index', tab='testing', menu=menu) }}">
                                 <span class="icon is-small"><i class="fas fa-vial"></i></span>
-                                <span>กำลังทดสอบตัวอย่าง/รอยืนยันผล</span>
+                                <span>กำลังทดสอบตัวอย่าง</span>
                                 {% if testing_count > 0 %}
                                     <span class="tag is-danger is-rounded is-size-7 ml-1">{{ testing_count }}</span>
                                 {% endif %}
@@ -33,27 +33,42 @@
                         <li {% if tab == 'edit_report' %}class="is-active"{% endif %}>
                             <a href="{{ url_for('service_admin.test_item_index', tab='edit_report', menu=menu) }}">
                                 <span class="icon is-small"><i class="fas fa-pencil-alt"></i></span>
-                                <span>ขอแก้ไขใบรายงานผล</span>
+                                <span>ขอแก้ไขผล</span>
                                 {% if edit_report_count > 0 %}
                                     <span class="tag is-danger is-rounded is-size-7 ml-1">{{ edit_report_count }}</span>
                                 {% endif %}
                             </a>
                         </li>
-                        <li {% if tab == 'pending_invoice' %}class="is-active"{% endif %}>
-                            <a href="{{ url_for('service_admin.test_item_index', tab='pending_invoice', menu=menu) }}">
+                        <li {% if tab == 'waiting_confirm' %}class="is-active"{% endif %}>
+                            <a href="{{ url_for('service_admin.test_item_index', tab='waiting_confirm', menu=menu) }}">
                                 <span class="icon is-small"><i class="fas fa-hourglass-half"></i></span>
-                                <span>รอออกใบแจ้งหนี้</span>
-                                {% if pending_invoice_count > 0 %}
-                                    <span class="tag is-danger is-rounded is-size-7 ml-1">{{ pending_invoice_count }}</span>
+                                <span>รอยืนยันผล</span>
+                                {% if waiting_confirm_query > 0 %}
+                                    <span class="tag is-danger is-rounded is-size-7 ml-1">{{ waiting_confirm_query }}</span>
                                 {% endif %}
                             </a>
                         </li>
-                        <li {% if tab == 'invoice' %}class="is-active"{% endif %}>
-                            <a href="{{ url_for('service_admin.test_item_index', tab='invoice', menu=menu) }}">
-                                <span class="icon is-small"><i class="fas fa-file-invoice-dollar"></i></span>
-                                <span>ออกใบแจ้งหนี้แล้ว</span>
+                        <li {% if tab == 'confirm' %}class="is-active"{% endif %}>
+                            <a href="{{ url_for('service_admin.test_item_index', tab='confirm', menu=menu) }}">
+                                <span class="icon is-small"><i class="fas fa-check"></i></span>
+                                <span>ยืนยันผลแล้ว</span>
                             </a>
                         </li>
+{#                        <li {% if tab == 'pending_invoice' %}class="is-active"{% endif %}>#}
+{#                            <a href="{{ url_for('service_admin.test_item_index', tab='pending_invoice', menu=menu) }}">#}
+{#                                <span class="icon is-small"><i class="fas fa-hourglass-half"></i></span>#}
+{#                                <span>รอออกใบแจ้งหนี้</span>#}
+{#                                {% if pending_invoice_count > 0 %}#}
+{#                                    <span class="tag is-danger is-rounded is-size-7 ml-1">{{ pending_invoice_count }}</span>#}
+{#                                {% endif %}#}
+{#                            </a>#}
+{#                        </li>#}
+{#                        <li {% if tab == 'invoice' %}class="is-active"{% endif %}>#}
+{#                            <a href="{{ url_for('service_admin.test_item_index', tab='invoice', menu=menu) }}">#}
+{#                                <span class="icon is-small"><i class="fas fa-file-invoice-dollar"></i></span>#}
+{#                                <span>ออกใบแจ้งหนี้แล้ว</span>#}
+{#                            </a>#}
+{#                        </li>#}
                         <li {% if tab == 'all' %}class="is-active"{% endif %}>
                             <a href="{{ url_for('service_admin.test_item_index', tab='all', menu=menu) }}">
                                 <span class="icon is-small"><i class="fas fa-list-ul"></i></span>
