Edited condition in request_index template of academic_services and service_admin templates

--- a/app/templates/service_admin/request_index.html
+++ b/app/templates/service_admin/request_index.html
@@ -184,15 +184,26 @@
                     {
                         data: null,
                         render: function (data, type, row) {
-                            if (row.result_approved_at) {
-                                let approved_at = moment(row.result_approved_at).format('DD/MM/YYYY HH:mm')
-                                return`<div class="field">
-                                            <div class="control">
-                                                ${approved_at}<br/>
-                                            </div>
-                                       </div>`;
+                            if (row.has_result) {
+                                    if (row.result_approved_at) {
+                                    let approved_at = moment(row.result_approved_at).format('DD/MM/YYYY HH:mm')
+                                    return`<div class="field">
+                                                <div class="control">
+                                                    ${approved_at}<br/>
+                                                </div>
+                                           </div>`;
+                                } else if (row.result_edit_at && row.result_is_edited == null) {
+                                    return`<span class="tag is-info">ขอแก้ไขใบรายงานผล</span>`;
+                                } else if(row.result_sent_at != null) {
+                                    return`<span class="tag is-warning">รอยืนยันใบรายงานผล</span>`;
+                                } else if (row.result_sent_at == null) {
+                                    return`<span class="tag is-primary">กำลังดำเนินการทดสอบ</span>`;
+                                }
+                                else {
+                                    return`<span class="tag is-danger">ยังไม่ดำเนินการทดสอบ</span>`;
+                                }
                             } else {
-                                return '';
+                                return`<span class="tag is-danger">ยังไม่ดำเนินการทดสอบ</span>`;
                             }
                         }
                     },
