--- a/app/templates/academic_services/view_request.html
+++ b/app/templates/academic_services/view_request.html
@@ -224,7 +224,7 @@
                                             {% for result in service_request.results %}
                                                 {% for item in result.result_items %}
                                                     {% if result.approved_at and item.final_file %}
-                                                        <a {% if result.status.status_id == 22 %}
+                                                        <a {% if service_request.status.status_id == 22 %}
                                                             class="button is-small is-link is-light is-rounded is-fullwidth mb-2"
                                                             href="{{ url_for('academic_services.download_file', key=item.final_file,
                                                                         download_filename=item.report_language + ' ' + '(ฉบับจริง)' + '.pdf') }}"
