--- a/app/templates/service_admin/modal/add_customer_address_modal.html
+++ b/app/templates/service_admin/modal/add_customer_address_modal.html
@@ -14,7 +14,7 @@
             <button type="button" id="cancelButton" class="delete" aria-label="close"></button>
         </header>
         <section class="modal-card-body">
-            <form {% if address_id %}
+            <form id="form" {% if address_id %}
                         hx-post="{{ url_for('service_admin.edit_customer_address', address_id=address_id) }}"
                   {% else %}
                         hx-post="{{ url_for('service_admin.edit_customer_address', type=type, customer_id=customer_id) }}"
@@ -66,43 +66,68 @@
                     </div>
                 </div>
                 <div class="field-body" style="margin-bottom: .8em">
-                    <div class="field">
-                        <label class="label">
-                            {{ form.province.label }}
-                            <span class="has-text-danger">*</span>
-                        </label>
-                        <div class="control">
-                            {{ form.province(class='js-example-basic-single', onchange="updateDistricts()") }}
+                            <div class="field">
+                                <label class="label">
+                                    {{ form.province.label }}
+                                    <span class="has-text-danger">*</span>
+                                </label>
+                                <div class="select">
+                                    {{ form.province(
+                                        **{'hx-include': 'closest form',
+                                            'hx-trigger': 'change',
+                                            'hx-target': '#province',
+                                            'hx-swap': 'outerHTML',
+                                            'hx-post': url_for('service_admin.get_items', use_type=false)
+                                        })
+                                    }}
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label class="label">
+                                    {{ form.district.label }}
+                                    <span class="has-text-danger">*</span>
+                                </label>
+                                <div class="select">
+                                    {{ form.district(
+                                        **{'hx-trigger': 'change',
+                                            'hx-target': '#province',
+                                            'hx-swap': 'outerHTML',
+                                            'hx-post': url_for('service_admin.get_items', use_type=false)
+                                        })
+                                    }}
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label class="label">
+                                    {{ form.subdistrict.label }}
+                                    <span class="has-text-danger">*</span>
+                                </label>
+                                <div class="select">
+                                    {{ form.subdistrict(
+                                        **{'hx-trigger': 'change',
+                                            'hx-target': '#province',
+                                            'hx-swap': 'outerHTML',
+                                            'hx-post': url_for('service_admin.get_items', use_type=false)
+                                        })
+                                    }}
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="field">
-                        <label class="label">
-                            {{ form.district.label }}
-                            <span class="has-text-danger">*</span>
-                        </label>
-                        <div class="control">
-                            {{ form.district(class='js-example-basic-single', onchange="updateSubdistricts()") }}
+                        <div class="field">
+                            <label class="label">
+                                รหัสไปรษณีย์
+                                <span class="has-text-danger">*</span>
+                            </label>
+                            <div class="control" id="zipcode">
+                                {{ form.zipcode(class='input',
+                                    **{'hx-trigger': 'change',
+                                        'hx-target': '#province',
+                                        'hx-swap': 'outerHTML',
+                                        'hx-post': url_for('service_admin.get_items', use_type=false)
+                                        })
+                                }}
+                            </div>
                         </div>
-                    </div>
-                    <div class="field">
-                        <label class="label">
-                            {{ form.subdistrict.label }}
-                            <span class="has-text-danger">*</span>
-                        </label>
-                        <div class="control">
-                            {{ form.subdistrict(class='js-example-basic-single', onchange="updateZipcode()") }}
-                        </div>
-                    </div>
-                </div>
-                <div class="field">
-                    <label class="label">
-                        รหัสไปรษณีย์
-                        <span class="has-text-danger">*</span>
-                    </label>
-                    <div class="control">
-                        {{ form.zipcode(class='input') }}
-                    </div>
-                </div>
                 <div class="field">
                     <label class="label">
                         {{ form.phone_number.label }}
