Added navbar-burger in customer_nav template of academic_services templates

--- a/app/templates/academic_services/customer_nav.html
+++ b/app/templates/academic_services/customer_nav.html
@@ -15,6 +15,11 @@
                     </div>
                 </div>
             </article>
+            <span class="navbar-burger burger" data-target="navbarMenuHeroA">
+                <span></span>
+                <span></span>
+                <span></span>
+            </span>
         </div>
         <div id="navbarMenuHeroA" class="navbar-menu">
             <div class="navbar-end">
