Added navbar-burger in admin_nav template of service_admin templates

--- a/app/templates/service_admin/admin_nav.html
+++ b/app/templates/service_admin/admin_nav.html
@@ -1,7 +1,13 @@
 <nav class="navbar is-warning">
     <div class="container">
         <div class="navbar-brand">
+
             <p class="navbar-item">{{ position }}</p>
+            <span class="navbar-burger burger" data-target="navbarMenuHeroA">
+                <span></span>
+                <span></span>
+                <span></span>
+            </span>
         </div>
         <div id="navbarMenuHeroA" class="navbar-menu">
             <div class="navbar-end">
