Added email form in create_customer template and customer_account template of academic-services templates

--- a/app/templates/academic_services/create_customer.html
+++ b/app/templates/academic_services/create_customer.html
@@ -21,7 +21,7 @@
                                 <div class="field">
                                     <label class="label">{{ form.email.label }}</label>
                                     <div class="control has-icons-left is-expanded">
-                                        {{ form.email(class="input", placeholder='ex. example@example.com') }}
+                                        {{ form.email(class="input", type='email', placeholder='ex. example@example.com') }}
                                         <span class="icon is-small is-left">
                                             <i class="fas fa-envelope"></i>
                                         </span>
