--- a/app/templates/academic_services/customer_account.html
+++ b/app/templates/academic_services/customer_account.html
@@ -119,7 +119,7 @@
                                         <span class="has-text-danger">*</span>
                                     </label>
                                     <div class="control has-icons-left is-expanded">
-                                        {{ c_form.email(class="input", id="contact_email", placeholder='ex. example@example.com') }}
+                                        {{ c_form.email(class="input", type='email', id="contact_email", placeholder='ex. example@example.com') }}
                                         <span class="icon is-small is-left">
                                         <i class="fas fa-envelope"></i>
                                     </span>
