Edited phone_number in create_sample_appointment template of academic_services template of academic_services  templates

--- a/app/templates/academic_services/create_sample_appointment.html
+++ b/app/templates/academic_services/create_sample_appointment.html
@@ -210,7 +210,7 @@
                                                 <strong>คณะเทคนิคการแพทย์ มหาวิทยาลัยมหิดล วิทยาเขตศาลายา</strong><br>
                                                 สถานที่ : {{ sample.request.sub_lab.salaya_address }}
                                                 <br/>
-                                                เบอร์โทรศัพท์ : {{ sample.request.sub_lab.lab.phone_number }}
+                                                เบอร์โทรศัพท์ : {{ sample.request.sub_lab.salaya_phone_number }}
                                                 {% if sample.request.sub_lab.lab.email %}
                                                     <br/>
                                                     อีเมล : {{ sample.request.sub_lab.lab.email }}
@@ -231,7 +231,7 @@
                                                     วิทยาเขตบางกอกน้อย</strong><br>
                                                 สถานที่ : {{ sample.request.sub_lab.siriraj_address }}
                                                 <br/>
-                                                เบอร์โทรศัพท์ : {{ sample.request.sub_lab.lab.phone_number }}
+                                                เบอร์โทรศัพท์ : {{ sample.request.sub_lab.siriraj_phone_number }}
                                                 {% if sample.request.sub_lab.lab.email %}
                                                     <br/>
                                                     อีเมล : {{ sample.request.sub_lab.lab.email }}
