Edited url in  approval_quotation_for_supervisor template and password_modal template of service_admin templates

--- a/app/templates/service_admin/approval_quotation_for_supervisor.html
+++ b/app/templates/service_admin/approval_quotation_for_supervisor.html
@@ -195,7 +195,7 @@
                                            hx-target="#password_modal"
                                            hx-trigger="click"
                                            hx-get="{{ url_for('service_admin.enter_password_for_sign_digital',
-                                           quotation_id=quotation_id) }}"
+                                           quotation_id=quotation_id, menu=menu) }}"
                                         >
                                             <span class="icon">
                                                 <i class="fas fa-check"></i>
