--- a/app/templates/service_admin/modal/password_modal.html
+++ b/app/templates/service_admin/modal/password_modal.html
@@ -5,7 +5,8 @@
             <p class="modal-card-title">Passphrase</p>
             <button type="button" id="cancelButton" class="delete" aria-label="close"></button>
         </header>
-        <form method="post" action="{{ url_for('service_admin.approval_quotation_for_supervisor', quotation_id=quotation_id) }}">
+        <form method="post" action="{{ url_for('service_admin.approval_quotation_for_supervisor', menu=menu,
+            quotation_id=quotation_id) }}">
             {{ form.hidden_tag() }}
             <section class="modal-card-body">
             <div class="field">
