Added active tab in request_index template of academic_services and service_admin templates

--- a/app/templates/service_admin/request_index.html
+++ b/app/templates/service_admin/request_index.html
@@ -483,11 +483,10 @@
                 $(this).find('.icon').addClass('active-icon');
             });
 
-            $(document).on('click', '.filter-reset', function () {
-                applyFilter(null);
-                $('.filter-btn .name').removeClass('active-text');
-                $('.filter-btn .icon').removeClass('active-icon');
-            });
+            {#$(document).on('click', '.filter-reset', function () {#}
+            {#    applyFilter(null);#}
+            {#    $('.filter-btn .name').removeClass('active-text');#}
+            {#    $('.filter-btn .icon').removeClass('active-icon');#}
 
             $('.filter-btn .name').removeClass('active-text');
             $('.filter-btn .icon').removeClass('active-icon');
